--- a/.github/workflows/push-main.yaml
+++ b/.github/workflows/push-main.yaml
@@ -53,9 +53,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          # changeme
           tags: |
-            quay.io/acend/hugo-training-template:latest
+            quay.io/puzzle/dagger-techlab:latest
       -
         name: Build Puzzle Version
         uses: docker/build-push-action@v6
@@ -65,9 +64,8 @@ jobs:
           build-args: |
             TRAINING_HUGO_ENV=puzzle
           push: true
-          # changeme
           tags: |
-            quay.io/acend/hugo-training-template:latest-puzzle
+            quay.io/puzzle/dagger-techlab:latest-puzzle
       -
         name: 'Install Helm'
         uses: azure/setup-helm@v4
@@ -89,7 +87,7 @@ jobs:
         name: Deploy Helm Release
         env:
           TRAINING_HELM_RELEASE: 'latest'
-          TRAINING_NAMESPACE: 'acend-hugo-training-template-prod' # changeme
+          TRAINING_NAMESPACE: 'pitc-cicd-dagger-techlab-prod'
           TRAINING_VERSION: '${{ github.sha }}'
         run: |
           helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait --kubeconfig $HOME/.kube/config  --namespace=$TRAINING_NAMESPACE --set=app.name=$HELM_RELEASE --set=app.version=$TRAINING_VERSION --repo=https://acend.github.io/helm-charts/ --values=helm-chart/values.yaml --atomic
@@ -97,9 +95,7 @@ jobs:
         name: Redeploy Deployments
         env:
           TRAINING_HELM_RELEASE: 'latest'
-          TRAINING_HELM_NAME: 'acend-hugo-template' # changeme
-          TRAINING_NAMESPACE: 'acend-hugo-training-template-prod' # changeme
-        # changeme
+          TRAINING_HELM_NAME: 'dagger-techlab-puzzle'
+          TRAINING_NAMESPACE: 'pitc-cicd-dagger-techlab-prod'
         run: |
-          kubectl rollout restart deployment/${TRAINING_HELM_RELEASE}-${TRAINING_HELM_NAME}-acend --kubeconfig $HOME/.kube/config --namespace $TRAINING_NAMESPACE
           kubectl rollout restart deployment/${TRAINING_HELM_RELEASE}-${TRAINING_HELM_NAME}-puzzle --kubeconfig $HOME/.kube/config --namespace $TRAINING_NAMESPACE
