--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 baseurl = "/"
-title = "Changeme Training"
+title = "Dagger Techlab"
 
 enableGitInfo = true
 
@@ -44,7 +44,7 @@ anchor = "smart"
 
 [Languages]
 [Languages.en]
-title = "Changeme Training"
+title = "Dagger Techlab"
 languageName = "English"
 weight = 1
 
@@ -68,7 +68,7 @@ url = "https://www.acend.ch"
 
 [params]
 copyright = "acend gmbh"
-github_repo = "https://github.com/acend/changeme-training"
+github_repo = "https://github.com/puzzle/dagger-techlab"
 github_branch = "main"
 
 enabledModule = "base"
@@ -93,7 +93,7 @@ footer_about_disable = true
 [[params.links.developer]]
 name = "GitHub"
 icon = "fab fa-github"
-url = "https://github.com/acend/changeme-training"
+url = "https://github.com/puzzle/dagger-techlab"
 
 [[params.links.user]]
 name = "Twitter"
