--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "changeme-training",
+  "name": "dagger-techlab",
   "version": "0.0.9",
-  "description": "changeme Training",
+  "description": "Dagger Techlab",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/changeme/changeme-training.git"
+    "url": "git+https://github.com/puzzle/dagger-techlab.git.git"
   },
-  "author": "changeme",
+  "author": "Puzzle ITC",
   "scripts": {
     "start": "bash -c \"docker run --rm --publish 8080:8080 -v $(pwd):/src:Z docker.io/klakegg/hugo:$(grep \"FROM docker.io/klakegg/hugo\" Dockerfile | sed 's/FROM docker.io\/klakegg\\/hugo://g' | sed 's/ AS builder//g') server -p 8080 --bind 0.0.0.0\"",
     "mdlint": "markdownlint --config .markdownlint.json content *.md",
@@ -14,9 +14,9 @@
     "prepare": "husky install"
   },
   "bugs": {
-    "url": "https://github.com/changeme/changeme-training/issues"
+    "url": "https://github.com/puzzle/dagger-techlab.git/issues"
   },
-  "homepage": "https://github.com/changeme/changeme-training#readme",
+  "homepage": "https://github.com/puzzle/dagger-techlab.git#readme",
   "devDependencies": {
     "husky": "9.1.1",
     "lint-staged": "15.2.7",
