--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -9,6 +9,8 @@ acendTraining:
         tag: ""
         tagsuffix: ""
       ingress:
+        annotations:
+          haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
         emptyTLS: true
         ingressClassName: openshift-public
         labels:
@@ -17,6 +19,7 @@ acendTraining:
         appname: dagger-techlab
         domainmain: puzzle.ch
         domain: ocp.cloudscale.puzzle.ch
+
 nameOverride: "dagger-techlab"
 fullnameOverride: ""
 
