--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
     },
     {
       "matchDatasources": ["docker"],
-      "matchPackagePatterns": ["klakegg/hugo", "nginxinc/nginx-unprivileged"],
+      "matchPackagePatterns": ["floryn90/hugo", "nginxinc/nginx-unprivileged"],
       "matchUpdateTypes": ["minor", "patch"],
       "automerge": true
     },
