renovate: exclude Dagger module go.mod

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,6 +8,10 @@
   "prConcurrentLimit": 4,
   "packageRules": [
     {
+      "matchFiles": ["mod/go.mod", "workflows/go.mod"], // Dagger module go.mod is managed by dagger
+      "enabled": false
+    },
+    {
       "matchDepTypes": [
         "devDependencies"
       ],
