update from template

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
   ],
@@ -13,65 +14,23 @@
       "enabled": false
     },
     {
-      "matchDepTypes": [
-        "devDependencies"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
-      "automerge": true,
-      "matchPackageNames": [
-        "/husky/",
-        "/markdownlint-cli/"
-      ]
+      "matchPackageNames": ["/floryn90/hugo/", "/nginxinc/nginx-unprivileged/"],
+      "matchDatasources": ["docker"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "automerge": true
     },
     {
-      "matchDatasources": [
-        "docker"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
-      "automerge": true,
-      "matchPackageNames": [
-        "/floryn90/hugo/",
-        "/nginxinc/nginx-unprivileged/"
-      ]
-    }/*,
-    {
-      "matchDatasources": [
-        "golang-version"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
+      "description": "Automerge GitHub Action updates",
+      "matchDepTypes": ["action"],
+      "matchDatasources": ["github-tags"],
+      "matchUpdateTypes": ["minor", "patch"],
       "automerge": true
-    }*/,
+    },
     {
-      "matchDepTypes": [
-        "action"
-      ],
-      "matchDatasources": [
-        "github-tags"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
+      "description": "Automerge dev-dependencies",
+      "matchDepTypes": ["devDependencies"],
+      "matchUpdateTypes": ["minor", "patch"],
       "automerge": true
-    }/*,
-    {
-      "matchManagers": [
-        "gomod"
-      ],
-      "matchDepTypes": [
-        "indirect"
-      ],
-      "enabled": true,
-      "automerge": false
-    }*/
+    }
   ]
 }
