--- a/.github/workflows/push-main.yaml
+++ b/.github/workflows/push-main.yaml
@@ -1,13 +1,3 @@
-# changeme 
-# Change the following parts to your current installation
-# - entire Docker Build steps accordingly to the amount of different versions or tags your building TRAINING_HUGO_ENV
-#   - Tags
-# - Helm Target Namespace
-# - Name of K8S Deployment to trigger and namespace
-# - Secrets
-#   - QUAYIO_USERNAME and QUAYIO_TOKEN must be set accordingly to your registry, existing users must have access to the repos
-#   - KUBECONFIG content of the Kubeconfig File, Account must have access to the k8s namespace. It's used in the helm steps
-
 name: Publish Main Version
 
 on:
@@ -28,7 +18,7 @@ jobs:
         name: Set up npm for linting
         uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
+          node-version: 'latest'
       -
         name: Lint Markdown
         run: npm ci && npm run mdlint
@@ -46,7 +36,7 @@ jobs:
           username: ${{ secrets.QUAYIO_USERNAME }}
           password: ${{ secrets.QUAYIO_TOKEN }}
       -
-        name: Build Latest Version
+        name: Build and Push Latest Version
         uses: docker/build-push-action@v6
         with:
           context: .
