--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -87,8 +87,8 @@ breadcrumb_disable = false
 sidebar_search_disable = false
 #  Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top nav bar
 navbar_logo = true
-# Set to true to disable the About link in the site footer
-footer_about_disable = true
+# Set to false to disable the About link in the site footer
+footer_about_enable = false
 
 ############################## social links ##############################
 [params.links]
@@ -107,7 +107,7 @@ name = "LinkedIn"
 icon = "fab fa-linkedin-in"
 url = "https://linkedin.com/company/puzzle-itc"
 
-
+# puzzle design
 [module]
   # uncomment line below for temporary local development of module
   # replacements = "github.com/google/docsy -> ../../docsy"
@@ -120,4 +120,10 @@ url = "https://linkedin.com/company/puzzle-itc"
     disable = false
   [[module.imports]]
     path = "github.com/acend/docsy-plus"
+    disable = false
+  [[module.imports]]
+    path = "github.com/google/docsy"
+    disable = false
+  [[module.imports]]
+    path = "github.com/google/docsy/dependencies"
     disable = false
