--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,12 +27,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Login to Quay.io Container Registry
+        name: Login to Image Registry
         uses: docker/login-action@v3
         with:
-          registry: quay.io
-          username: ${{ secrets.QUAYIO_USERNAME }}
-          password: ${{ secrets.QUAYIO_TOKEN }}
+          registry: harbor.puzzle.ch
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_AUTH }}
       -
         name: Build Latest Version
         uses: docker/build-push-action@v6
@@ -41,17 +41,17 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            quay.io/puzzle/dagger-techlab:pr-${{ github.event.pull_request.number }}
+            harbor.puzzle.ch/pitc-techlabs-public/dagger-techlab:pr-${{ github.event.pull_request.number }}
       -
         name: 'Install Helm'
         uses: azure/setup-helm@v4
         with:
-          version: v3.6.2
+          version: 'latest'
       -
         name: Install Kubectl
         uses: azure/setup-kubectl@v4
         with:
-          version: v1.21.2
+          version: 'latest'
       -
         name: Create KUBECONFIG
         env:
