--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "author": "Puzzle ITC",
   "scripts": {
-    "start": "bash -c \"docker run --rm --publish 8080:8080 -v $(pwd):/src:Z docker.io/floryn90/hugo:$(grep \"FROM docker.io/floryn90/hugo\" Dockerfile | sed 's/FROM docker.io\/floryn90\\/hugo://g' | sed 's/ AS builder//g') server -p 8080 --bind 0.0.0.0\"",
+    "start": "bash -c \"docker run --rm --publish 8080:8080 -v $(pwd):/src:Z docker.io/floryn90/hugo:$(grep 'FROM docker.io/floryn90/hugo' Dockerfile | sed 's#FROM docker.io/floryn90/hugo:##g' | sed 's/ AS builder//g') server -p 8080 --bind 0.0.0.0\"",
     "mdlint": "markdownlint --config .markdownlint.json content *.md",
     "mdlint-fix": "npm run mdlint -- --fix",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "bugs": {
     "url": "https://github.com/puzzle/dagger-techlab.git/issues"
