--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,11 @@ name: Build Training
 on:
   pull_request:
 
+env:
+  REGISTRY: 'ghcr.io'
+  REGISTRY_PATH: '${{ github.repository }}'
+  IMAGE_NAME: 'training-spa'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,11 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       -
         name: Login to Image Registry
-        uses: docker/login-action@v3
-        with:
-          registry: harbor.puzzle.ch
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_AUTH }}
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${REGISTRY} -u ${{ github.actor }} --password-stdin
       -
         name: Build Latest Version
         uses: docker/build-push-action@v6
@@ -41,7 +42,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            harbor.puzzle.ch/pitc-techlabs-public/dagger-techlab:pr-${{ github.event.pull_request.number }}
+            ${REGISTRY}/${REGISTRY_PATH}/${IMAGE_NAME}:pr-${{ github.event.pull_request.number }}
       -
         name: 'Install Helm'
         uses: azure/setup-helm@v4
