--- a/.github/workflows/push-main.yaml
+++ b/.github/workflows/push-main.yaml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: 'ghcr.io'
+  REGISTRY_PATH: '${{ github.repository }}'
+  IMAGE_NAME: 'training-spa'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,11 +35,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       -
         name: Login to Image Registry
-        uses: docker/login-action@v3 
-        with:
-          registry: harbor.puzzle.ch
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_AUTH }}
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${REGISTRY} -u ${{ github.actor }} --password-stdin
       -
         name: Build and Push Latest Version
         uses: docker/build-push-action@v6
@@ -43,7 +44,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            harbor.puzzle.ch/pitc-techlabs-public/dagger-techlab:latest
+            ${REGISTRY}/${REGISTRY_PATH}/${IMAGE_NAME}:latest
       -
         name: 'Install Helm'
         uses: azure/setup-helm@v4
