--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,10 +3,17 @@ name: Build Training
 on:
   pull_request:
 
+#env:
+#  REGISTRY: 'ghcr.io'
+#  REGISTRY_PATH: '${{ github.repository }}'
+#  IMAGE_NAME: 'training-spa'
+
 env:
-  REGISTRY: 'ghcr.io'
-  REGISTRY_PATH: '${{ github.repository }}'
-  IMAGE_NAME: 'training-spa'
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+
 
 jobs:
   build:
@@ -32,17 +39,35 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Login to Image Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${REGISTRY} -u ${{ github.actor }} --password-stdin
-      -
-        name: Build Latest Version
-        uses: docker/build-push-action@v6
+        # Login against a Docker registry https://github.com/docker/login-action
+        name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      #- 
+        # Extract metadata (tags, labels) for Docker https://github.com/docker/metadata-action
+        #name: Extract Docker metadata
+        #id: meta
+        #uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
+        #with:
+        #  images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - 
+        # Build and push Docker image with Buildx https://github.com/docker/build-push-action
+        name: Build and push Docker image
+        id: build-and-push
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
           file: ./Dockerfile
           push: true
+          #tags: ${{ steps.meta.outputs.tags }}
           tags: |
-            ${REGISTRY}/${REGISTRY_PATH}/${IMAGE_NAME}:pr-${{ github.event.pull_request.number }}
+            ${REGISTRY}/${IMAGE_NAME}:pr-${{ github.event.pull_request.number }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       -
         name: 'Install Helm'
         uses: azure/setup-helm@v4
