--- a/.github/workflows/pr-cleanup.yaml
+++ b/.github/workflows/pr-cleanup.yaml
@@ -1,7 +1,14 @@
 name: PRCleanup
+
 on:
   pull_request:
     types: [closed]
+
+env:
+  # github.repository.name as <account>
+  ACCOUNT: ${{ github.repository.name }}
+  PR_NUMBER: '${{ github.event.pull_request.number }}'
+  PACKAGE_TYPE: 'container'
 
 jobs:
   pr-cleanup:
@@ -40,12 +47,10 @@ jobs:
       -
         name: Delete Tags on Image Registry
         id: delete_tags
-        env:
-          PR_NUMBER: '${{ github.event.pull_request.number }}'
-          REGISTRY_API_AUTH: '${{ secrets.REGISTRY_USERNAME }}:${{ secrets.REGISTRY_AUTH }}'
-          PROJECT: 'pitc-techlabs-public'
-          REPOSITORY: 'dagger-techlab'
         run: |
-          curl -X DELETE \
-            -u ${REGISTRY_API_AUTH} \
-            https://harbor.puzzle.ch/api/v2.0/projects/${PROJECT}/repositories/${REPOSITORY}/artifacts/pr-${PR_NUMBER}
+          curl -L \
+            -X DELETE \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/orgs/ORG/packages/${PACKAGE_TYPE}/${ACCOUNT}/versions/pr-${PR_NUMBER}
