--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Dump github context
+        run:   echo "$GITHUB_CONTEXT"
+        shell: bash
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+      -
         name: Checkout
         uses: actions/checkout@v4
         with:
