--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,9 +7,14 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
+  HELM_RELEASE: pr-${{ github.event.pull_request.number }}
+  HELM_NAME: dagger-techlab-puzzle
+  NAMESPACE: pitc-cicd-dagger-techlab-test
+  TRAINING_VERSION: ${{ github.sha }}
+  PR_ENV_URL: https://dagger-techlab-pr-${{ github.event.pull_request.number }}.ocp.cloudscale.puzzle.ch
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
       -
@@ -25,6 +30,11 @@ jobs:
       -
         name: Lint Markdown
         run: npm ci && npm run mdlint
+
+  build_and_push:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -50,6 +60,11 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:pr-${{ github.event.pull_request.number }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    steps:
       -
         name: 'Install Helm'
         uses: azure/setup-helm@v4
@@ -69,14 +84,10 @@ jobs:
           echo "$KUBE_CONFIG" > $HOME/.kube/config
       -
         name: Deploy Helm Release
-        env:
-          TRAINING_HELM_RELEASE: 'pr-${{ github.event.pull_request.number }}'
-          TRAINING_NAMESPACE: 'pitc-cicd-dagger-techlab-test'
-          TRAINING_VERSION: '${{ github.sha }}'
         run: |
-          helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait \
+          helm upgrade $HELM_RELEASE acend-training-chart --install --wait \
             --kubeconfig $HOME/.kube/config \
-            --namespace=$TRAINING_NAMESPACE \
+            --namespace=$NAMESPACE \
             --set=app.name=$HELM_RELEASE \
             --set=app.version=$TRAINING_VERSION \
             --repo=https://acend.github.io/helm-charts/ \
@@ -84,19 +95,19 @@ jobs:
             --atomic
       -
         name: Redeploy Deployments
-        env:
-          TRAINING_HELM_RELEASE: 'pr-${{ github.event.pull_request.number }}'
-          TRAINING_HELM_NAME: 'dagger-techlab-puzzle'
-          TRAINING_NAMESPACE: 'pitc-cicd-dagger-techlab-test'
         run: |
-          kubectl rollout restart deployment/${TRAINING_HELM_RELEASE}-${TRAINING_HELM_NAME} \
+          kubectl rollout restart deployment/${HELM_RELEASE}-${HELM_NAME} \
             --kubeconfig $HOME/.kube/config \
-            --namespace $TRAINING_NAMESPACE
+            --namespace $NAMESPACE
+
+  comment:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
       -
         name: Comment PR Environments in PR
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: |
-           PR Environments:
-           * puzzle version <https://dagger-techlab-pr-${{ github.event.pull_request.number }}.ocp.cloudscale.puzzle.ch>
+            🚀 PR Environment: [Open Deployment](${{ env.PR_ENV_URL }})
