--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,10 +35,10 @@ jobs:
     needs: prepare
     steps:
       -
-        name: Download source artifact
-        uses: actions/download-artifact@v4
+        name: Checkout Repository
+        uses: actions/checkout@v4
         with:
-          name: source
+          submodules: recursive
       -
         name: Set up npm for linting
         uses: actions/setup-node@v4
