--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,24 +15,8 @@ env:
   PR_ENV_URL: https://dagger-techlab-pr-${{ github.event.pull_request.number }}.ocp.cloudscale.puzzle.ch
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      -
-        name: Upload source as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: source
-          path: .
-
   lint:
     runs-on: ubuntu-latest
-    needs: prepare
     steps:
       -
         name: Checkout Repository
@@ -50,7 +34,7 @@ jobs:
 
   build_and_push:
     runs-on: ubuntu-latest
-    needs: prepare
+    needs: lint
     steps:
       -
         name: Download source artifact
