--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,22 @@ jobs:
         with:
           node-version: 'latest'
       -
+        name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      -
+        name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
+      -
         name: Lint Markdown
         run: npm ci && npm run mdlint
 
@@ -72,6 +88,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push
     steps:
+      -
+        name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            helm-chart
+          sparse-checkout-cone-mode: false
+          submodules: recursive
+          fetch-depth: 0
       -
         name: 'Install Helm'
         uses: azure/setup-helm@v4
