--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,6 +94,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push
+    env:
+      KUBE_CONFIG_PATH: '$HOME/.kube'
+      KUBE_CONFIG_FILENAME: 'config'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
