--- a/.github/workflows/pr-cleanup.yaml
+++ b/.github/workflows/pr-cleanup.yaml
@@ -11,6 +11,8 @@ jobs:
     env:
       TRAINING_HELM_RELEASE: 'pr-${{ github.event.pull_request.number }}'
       TRAINING_NAMESPACE: 'pitc-cicd-dagger-techlab-test'
+      KUBE_CONFIG_PATH: '$HOME/.kube'
+      KUBE_CONFIG_FILENAME: 'config'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,18 +29,13 @@ jobs:
       - name: Create KUBECONFIG
         env:
           KUBE_CONFIG: '${{ secrets.KUBECONFIG_TEST_AV2 }}'
-        run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBE_CONFIG" > $HOME/.kube/config
+        run: bash ./scripts/create_kubeconfig.sh
       - name: Remove PR Environment Helm Release
-        env:
-          TRAINING_HELM_RELEASE: ${{ env.TRAINING_HELM_RELEASE }}
-          TRAINING_NAMESPACE: ${{ env.TRAINING_NAMESPACE }}
-          KUBECONFIG: $HOME/.kube/config
         run: bash ./scripts/remove_helm_release.sh
 
   cleanup_registry:
     runs-on: ubuntu-latest
+    needs: cleanup_helm
     env:
       ORG: '${{ github.repository_owner }}'
       PACKAGE_NAME: '${{ github.event.repository.name }}'
@@ -46,5 +43,12 @@ jobs:
       TAG: "pr-${{ github.event.pull_request.number }}"
       LOGIN_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            scripts
+          sparse-checkout-cone-mode: false
+          fetch-depth: 0
       - name: Run registry cleanup script
         run: bash ./scripts/cleanup_registry.sh
