--- a/.github/workflows/push-main.yaml
+++ b/.github/workflows/push-main.yaml
@@ -13,6 +13,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      KUBE_CONFIG_PATH: '$HOME/.kube'
+      KUBE_CONFIG_FILENAME: 'config'
     steps:
       -
         name: Checkout
@@ -66,9 +69,7 @@ jobs:
         name: Create KUBECONFIG
         env:
           KUBE_CONFIG: '${{ secrets.KUBECONFIG_PROD_AV2 }}'
-        run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBE_CONFIG" > $HOME/.kube/config
+        run: bash ./scripts/create_kubeconfig.sh
       -
         name: Deploy Helm Release
         env:
@@ -77,7 +78,7 @@ jobs:
           TRAINING_VERSION: '${{ github.sha }}'
         run: |
           helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait \
-            --kubeconfig $HOME/.kube/config \
+            --kubeconfig "$KUBE_CONFIG_PATH/$KUBE_CONFIG_FILENAME" \
             --namespace=$TRAINING_NAMESPACE \
             --set=app.name=$HELM_RELEASE \
             --set=app.version=$TRAINING_VERSION \
@@ -93,6 +94,5 @@ jobs:
           TRAINING_NAMESPACE: 'pitc-cicd-dagger-techlab-prod'
         run: |
           kubectl rollout restart deployment/${TRAINING_HELM_RELEASE}-${TRAINING_HELM_NAME} \
-            --kubeconfig $HOME/.kube/config \
+            --kubeconfig "$KUBE_CONFIG_PATH/$KUBE_CONFIG_FILENAME" \
             --namespace $TRAINING_NAMESPACE
-
