--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -50,9 +50,12 @@ jobs:
       - name: Lint Markdown
         run: npm ci && npm run mdlint
 
-  build_and_push:
+
+  build_push_image:
     runs-on: ubuntu-latest
     needs: lint
+    outputs:
+      digest: ${{ steps.build-push.outputs.digest }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -68,8 +71,8 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker pr image
-        id: build-and-push
+      - name: Push Docker image
+        id: build-push
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -79,6 +82,19 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.BUILD_VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          
+  sign_image:
+    runs-on: ubuntu-latest
+    needs: build_push_image
+    outputs:
+      digest: ${{ needs.build_push_image.outputs.digest }}
+    steps:
+      - name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Install cosign
         uses: sigstore/cosign-installer@v3.8.2
         with:
@@ -86,18 +102,42 @@ jobs:
       - name: Sign Docker image with cosign
         env:
           TAG: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.BUILD_VERSION }}
-          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+          DIGEST: ${{ needs.build_push_image.outputs.digest }}
         run: |
           COSIGN_EXPERIMENTAL=1 cosign sign --yes ${TAG}@${DIGEST}
+
+  verify_image:
+    runs-on: ubuntu-latest
+    needs: sign_image
+    outputs:
+      digest: ${{ needs.sign_image.outputs.digest }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            scripts
+          sparse-checkout-cone-mode: false
+          fetch-depth: 0
+      - name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3.8.2
+        with:
+          cosign-release: 'v2.2.4'
       - name: Verify Docker image with cosign
         env:
           TAG: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.BUILD_VERSION }}
-          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+          DIGEST: ${{ needs.sign_image.outputs.digest }}
         run: bash ./scripts/verify_cosign.sh
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push
+    needs: verify_image
     env:
       KUBE_CONFIG_PATH: '$HOME/.kube'
       KUBE_CONFIG_FILENAME: 'config'
@@ -136,7 +176,7 @@ jobs:
   comment:
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: verify_image
     steps:
       - name: Comment PR Environments in PR
         uses: marocchino/sticky-pull-request-comment@v2
@@ -144,4 +184,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: |
             🚀 PR Environment: [Open Deployment](${{ env.PR_ENV_URL }})
-            🖋️ Image Digest: `${{ steps.build-and-push.outputs.digest }}`
+            🏷️ Image Tag: `${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.BUILD_VERSION }}`
+            🖋️ Image Digest: `${{ needs.verify_image.outputs.digest }}`
