--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,35 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
-  "ignorePaths": [
-    "**/mod/**"
-  ],
-  "prConcurrentLimit": 4,
   "packageRules": [
     {
-      //"matchFiles": ["mod/go.mod", "workflows/go.mod"], // Dagger module go.mod is managed by dagger
-      "matchFiles": ["**/go.mod"], // Dagger module go.mod is managed by dagger
-      "enabled": false
-    },
-    {
-      "matchPackageNames": ["/floryn90/hugo/", "/nginxinc/nginx-unprivileged/"],
-      "matchDatasources": ["docker"],
       "matchUpdateTypes": ["minor", "patch"],
-      "automerge": true
-    },
-    {
-      "description": "Automerge GitHub Action updates",
-      "matchDepTypes": ["action"],
-      "matchDatasources": ["github-tags"],
-      "matchUpdateTypes": ["minor", "patch"],
-      "automerge": true
-    },
-    {
-      "description": "Automerge dev-dependencies",
-      "matchDepTypes": ["devDependencies"],
-      "matchUpdateTypes": ["minor", "patch"],
+      "matchCurrentVersion": "!/^0/",
       "automerge": true
     }
   ]
